Gap between avatar and button fixed and notifications styling

--- a/app/assets/stylesheets/pages/_groups.scss
+++ b/app/assets/stylesheets/pages/_groups.scss
@@ -37,4 +37,7 @@
   font-weight: bold;
   margin-bottom: 2px;
  }
-
+.container {
+  max-width: 900px;
+  margin: 50px auto;
+}
